# jobby

./: .gitignore  LICENSE  README.md  config.yaml  main.py  pyproject.toml
.github/workflows/: python-publish.yml
jobby/: config.py  diff.py  job.py  provider.py
